# evl-daemon-python

./: .travis.yml  Dockerfile  Pipfile  README.md  config.json  evldaemon.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  codeql-analysis.yml  run-tests.yml
evl/: command.py  config.py  connection.py  data.py  event.py  tpi.py  util.py
evl/listeners/: asynchttp.py  http.py
evl/notifiers/: consolenotifier.py  emailnotifier.py  mimirnotifier.py  smsnotifier.py
evl/settings/: settings.py
evl/storage/: memory.py
evl/tasks/: heartbeat.py  silentarm.py
test/: test_command.py  test_config.py  test_data.py  test_event.py  test_tpi.py
