[tool.poetry]
name = "evl-daemon-python"
version = "0.1.0"
description = "A cross-platform API and daemon for the Envisalink TPI (DSC) module."
authors = ["Mike Farr <mike@tokenize.ca>"]
license = "GPL-3.0-only"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10"
twilio = "^9.0"
sendgrid = "^6.0"
marshmallow = "^3.13"

[tool.poetry.dev-dependencies]
black = "^24.0"
flake8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
