[project]
authors = [{ name = "Mike Farr", email = "mike@tokenize.ca" }]
license = { text = "GPL-3.0-only" }
requires-python = "<4.0,>=3.11"
dependencies = [
    "aiohttp<4.0,>=3.10",
    "twilio<10.0,>=9.3",
    "sendgrid<7.0,>=6.0",
    "marshmallow>=3.23,<5.0",
]
name = "evl-daemon-python"
version = "0.1.0"
description = "A cross-platform API and daemon for the Envisalink TPI (DSC) module."

[dependency-groups]
dev = ["black>=24.0,<26.0", "flake8"]
